# ServiceScheduling

./: README.md
backend/: .gitignore  Dockerfile  db.sqlite3  docker-compose.yml  pyproject.toml
backend/core/: models.py  permissions.py  serializers.py  urls.py  views.py
backend/core/migrations/: 0001_initial.py  0002_alter_appointment_status.py
backend/src/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: .gitignore  package-lock.json  package.json
frontend/src/: App.tsx  hooks.ts
frontend/src/api/: axios.ts
frontend/src/app/: store.ts
frontend/src/components/: HeaderMenu.tsx  Layout.tsx  PrivateRoute.tsx
frontend/src/features/appointments/: appointmentsSlice.ts
frontend/src/features/auth/: authSlice.ts
frontend/src/features/services/: servicesSlice.ts.ts
frontend/src/pages/: AdminDashboard.tsx  AppointmentForm.tsx  Auth.tsx  History.tsx  ServiceCatalog.tsx
frontend/src/styles/: GlobalStyle.ts
